<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- It is important to use a version of api-task that is compatible with the api-parent version. -->

	<parent>
		<groupId>com.ferguson.cs</groupId>
		<artifactId>api-parent</artifactId>
		<version>4.0.3</version>
	</parent>

	<properties>
		<api-task.version>4.0.2</api-task.version>
	</properties>
	<version>1.0.116</version>

	<groupId>com.ferguson.cs.product</groupId>
	<artifactId>product-services</artifactId>
	<packaging>pom</packaging>
	<name>product-services</name>
	<description>Commerce Services Product Domain Services</description>
	<url>http://www.build.com/</url>
	<organization>
		<name>Build.com</name>
		<url>http://www.build.com/</url>
	</organization>
	<inceptionYear>2019</inceptionYear>

	<modules>
		<module>product-api</module>
		<module>product-model</module>
		<module>product-streams</module>
		<module>product-tasks</module>
	</modules>
	<build>
		<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jdeprscan-plugin</artifactId>
					<version>3.0.0-alpha-1</version>
					<configuration>
						<release>11</release>
					</configuration>
				</plugin>
		</plugins>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.ferguson.cs.product</groupId>
				<artifactId>product-model</artifactId>
				<version>1.0.116</version>
			</dependency>
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger2</artifactId>
				<version>2.9.2</version>
			</dependency>
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger-ui</artifactId>
				<version>2.9.2</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>buildcom-release</name>
			<url>https://chico-artifactory.impdir.com/artifactory/buildcom-release</url>
		</repository>
		<repository>
			<snapshots/>
			<id>snapshots</id>
			<name>buildcom-snapshot</name>
			<url>https://chico-artifactory.impdir.com/artifactory/buildcom-snapshot</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>buildcom-release</name>
			<url>https://chico-artifactory.impdir.com/artifactory/buildcom-release</url>
		</pluginRepository>
		<pluginRepository>
			<snapshots/>
			<id>snapshots</id>
			<name>buildcom-snapshot</name>
			<url>https://chico-artifactory.impdir.com/artifactory/buildcom-snapshot</url>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<repository>
			<id>central</id>
			<name>chico-artifactory-releases</name>
			<url>https://chico-artifactory.impdir.com/artifactory/buildcom-maven-release</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>chico-artifactory-snapshots</name>
			<url>https://chico-artifactory.impdir.com/artifactory/buildcom-maven-snapshot</url>
		</snapshotRepository>
	</distributionManagement>
</project>
